--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
+    "create-react-app": "^3.4.1",
     "immutability-helper": "^2.1.1",
     "keycode-js": "^0.0.4",
     "react": "^15.4.2",
