--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "recompose": "^0.23.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"heroku-postbuild": "npm run build"
   }
 }
