--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "ajv": "^6.8.1",
     "bootstrap": "^3.4.1",
     "create-react-app": "^3.4.1",
     "immutability-helper": "^2.1.1",
@@ -16,8 +17,11 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-"start": "serve -s build",
-"build": "react-scripts build",
-"heroku-postbuild": "npm run build"
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm run build"
+  },
+  "resolutions": {
+    "ajv": "6.8.1"
   }
 }
