--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "keycode-js": "^0.0.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "recompose": "^0.23.5"
+    "recompose": "^0.23.5",
+    "serve": "^11.3.1"
   },
   "scripts": {
     "dev": "react-scripts start",
